fix priority badge width and back button alignment

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -929,7 +929,7 @@ table{
   align-items: center;
   width: 100%;
   height: 50px;
-  padding: 0px 0px 20px 0px;
+  padding: 0px 0px 0px 0px;
 }
 
 #pagination-btn{
